# rotatlon

./: .gitignore  Makefile  Untitled.ipynb  example.csv  legacy.csv  main.py  meson.build  planets.csv
include/rotatlon/: config.hh  draw_particles.hh  dump_particles.hh  parse_particles.hh  particle.hh  populate_particles.hh  update_particles.hh  v2.hh  v3.hh
src/: config.cc  draw_particles.cc  dump_particles.cc  main.cc  parse_particles.cc  particle.cc  populate_particles.cc  update_particles.cc  v2.cc  v3.cc
